# dewr

./: .gitignore  Makefile  README.md
.github/workflows/: lint.yaml  release.yaml  rustfmt.yaml  tests.yaml
lab_template/: Makefile  README.md
lab_template/src/: config.rs  dummy.rs
lab_template/tests/: test_colors.rs
module_01/: Cargo.toml  Makefile  README.md
module_01/src/: collections.rs  colors.rs  config.rs  cwc.rs  dummy.rs  freq_count.rs  lang_weights.rs  lib.rs  main.rs
module_01/tests/: test_collections.rs  test_colors.rs  test_cwc.rs  test_dummy.rs  test_freq_count.rs  test_lang_weights.rs  test_stdin.rs
module_02/: Cargo.toml  Makefile  README.md  fruits.csv
module_02/src/: colors.rs  config.rs  datarace.rs  dp.rs  dummy.rs  fruitsalad.rs  lib.rs  main.rs
module_02/tests/: test_colors.rs  test_datarace.rs  test_dummy.rs  test_fruitsalad.rs  test_stdin.rs
module_03/: Cargo.toml  Makefile  README.md  build.sh
module_03/data/: output.csv
module_03/src/: colors.rs  config.rs  csvwrite.rs  dummy.rs  lib.rs  main.rs  polartools.rs
module_03/tests/: test_colors.rs  test_dp.rs  test_dummy.rs  test_stdin.rs
module_04/: Cargo.toml  Makefile  README.md
module_04/src/: challenge.rs  colors.rs  config.rs  dummy.rs  lib.rs  main.rs
module_04/tests/: test_colors.rs  test_dummy.rs  test_stdin.rs
tools/: new_project.sh
