#
# Cargo.toml - rust manifest file
#
#  module_02 - rust course module 02
#  copyright (c) 2024-2025 ths <development@ths.one>
#
#  file name     : Cargo.toml
#  file version  : 0.1.0
#  file created  : 2025/02/25
#  last change   : 2025/02/25
#
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[package]
name = "module_02"
version = "0.1.0"
edition = "2021"
description = "rust course module 02."
authors = ["ths <development@ths.one>"]
homepage = "https://ths.one"
repository = "https://github.com/tositrino/dewr.git"
keywords = ["rust", "data", "engineering", "module 02" ]
categories = ["tools"]
readme = "README.md"
exclude = ["intermediate_data/"]
publish = false

[workspace]
exclude = ["intermediate_data"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
